<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="351dp"
    android:layout_height="339dp"
    android:orientation="vertical"
    tools:context=".ScafeFragment">

    <TextView
        android:id="@+id/s_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/culoare_scafe" />

    <Spinner
        android:id="@+id/s_color_choice"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
         />

    <TextView
        android:id="@+id/s_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tip_placa" />

    <Spinner
        android:id="@+id/s_tip_choice"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/s_lung_perete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lungime_perete" />

    <EditText
        android:id="@+id/s_l_perete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/lungime_perete_1"
        android:inputType="number"
        android:textSize="15dp" />

    <Button
        android:id="@+id/s_simulare"
        android:background="@drawable/mybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/simulare" />

    <Button
        android:id="@+id/s_cereoferta"
        android:background="@drawable/mybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cere Oferta" />
</LinearLayout>